--- a/public/notes.html
+++ b/public/notes.html
@@ -17,8 +17,8 @@
     <a class="navbar-brand" href="/">Note Taker
     </a>
     <div class="icons">
-      <i class="fas fa-save text-light save-note"></i>
-      <i class="fas fa-pen text-light new-note"></i>
+      <i class="fas fa-save text-light save-note icon-2x"></i>
+      <i class="fas fa-pen text-light new-note icon-2x"></i>
     </div>
   </nav>
   <div class="container-fluid">
