Finalizing app - Got redirects working

--- a/public/errorPost.html
+++ b/public/errorPost.html
@@ -16,7 +16,8 @@
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
-      <h1 class="display-4">PAGE NOT FOUND! :( </h1>
+      <h1 class="display-4">NOTE NOT FOUND! :( </h1>
+      <p class="lead">Please make sure to include all details when submitting a new note. All notes must include a title and text in the body.</p>
      
       <a class="btn btn-primary btn-lg mt-4" href="/index" role="button">Go back to Main Menu</a>
     </div>
